# anon_to_zenodo

./: LICENSE  README.md  __main__.py  core.py  main.py  pyproject.toml
src/anon_to_zenodo/: __init__.py
