[project]
name = "anon-to-zenodo"
version = "0.1.0"
description = "Utility to zip a directory and upload to Zenodo with versioning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zenodo-client>=0.3.6",
]

[project.scripts]
anon-to-zenodo = "anon_to_zenodo.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
